src/theme/io-sanita/components/blocks/_video.scss
.block.video {
  .video-inner {
    > div {
      position: relative;
      overflow: hidden;
      max-width: 100%;
      height: 0;
      padding-bottom: 56.25%;

      .icon-play {
        position: absolute;
        z-index: 2;
        top: 50%;
        left: 50%;
        width: 4rem;
        height: 2.6rem;
        border-radius: 15px;
        background-color: rgba(0, 0, 0, 0.7);
        color: $white;
        cursor: pointer;
        line-height: 2.6rem;
        text-align: center;
        transform: translateX(-50%) translateY(-50%);
      }
    }

    .ui.embed.active {
      .icon-play,
      img.placeholder {
        display: none;
      }
    }

    img.placeholder {
      position: absolute;
      top: 50%;
      left: 0;
      width: 100%;
      min-width: 100%;
      height: unset;
      min-height: 100%;
      object-fit: cover;
      transform: translateY(-50%);
    }
  }

  .ui.embed {
    position: relative;

    img.placeholder {
      cursor: pointer;
    }
  }

  &.align.center iframe,
  &.full .video-inner.full-width iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 0;
    border: none;
    margin: 0;
  }

  &.full {
    .video-inner.full-width > div {
      height: 480px;
      position: relative;
      padding-bottom: 0;
    }
  }

  @media (max-width: #{map-get($grid-breakpoints, md)}) {
    &.align.right,
    &.align.left {
      .video-inner {
        width: 100%;
        margin-right: 0 !important;
        margin-left: 0 !important;
        float: unset;
      }

      img {
        margin-right: 0 !important;
        margin-left: 0 !important;
        float: unset;
      }
    }
  }
}

